--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Container",
   "main": "lib/Container.js",
   "author": "Jed Watson",
+  "license": "MIT",
   "homepage": "https://github.com/JedWatson/react-container",
   "repository": {
     "type": "git",
