--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "eslint-plugin-react": "^3.5.1",
     "gulp": "^3.9.0",
     "react": ">=0.14.0",
+    "react-dom": ">=0.14.0",
     "react-component-gulp-tasks": "^0.7.6"
   },
   "peerDependencies": {
-    "react": ">=0.14.0"
+    "react": ">=0.14.0",
+    "react-dom": ">=0.14.0"
   },
   "browserify-shim": {
     "react": "global:React"
